# CP3

./: .gitignore  pyproject.toml
.ipynb_checkpoints/: interactive_fractal_map-checkpoint.ipynb
Boids/: config.py  funcs.py  main.py
HW2.heat_transfer_problem_2d/: heat_transfer_problem_2d_2023.ipynb
HW2.heat_transfer_problem_2d/files/: Probe0 120x120.npy  Probe0 240x240.npy  Probe0 60x60.npy  Probe1 120x120.npy  Probe1 240x240.npy  Probe1 480x480.npy  Probe1 60x60.npy  Probe2 120x120.npy  Probe2 240x240.npy  Probe2 480x480.npy  Probe2 60x60.npy  Probe3 120x120.npy  Probe3 240x240.npy  Probe3 480x480.npy  Probe3 60x60.npy  Probe4 120x120.npy  Probe4 240x240.npy  Probe4 480x480.npy  Probe4 60x60.npy  Temperature 120x120.npy  Temperature 240x240.npy  Temperature 480x480.npy  Temperature 60x60.npy
HW3. ferromagnetic_energy_problem_2d/: data.npy  ferromagnetic_energy_problem_2d_2023.ipynb
Light_Waves/: config.py  enums.py  impulse.py  main.py  model.py  old.py  run.sh  simulation.py
