[tool.poetry]
name = "cp3"
version = "0.1.0"
description = ""
authors = ["\"Igor Mirnyy\""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
numba = "^0.58.1"
holoviews = "^1.18.1"
bokeh = "^3.3.1"
tqdm = "^4.66.1"
ipykernel = "^6.26.0"
imageio = {extras = ["ffmpeg"], version = "^2.34.0"}
scipy = "^1.11.4"
pyqt6 = "^6.6.1"
arcade = "^2.6.17"
taichi = "^1.7.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
